# fukui_index_prediction

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  setup.py
fukui_net/utils/: add_skipatom.py  efficient_kan.py  prepare.py  train.py  utils.py
notebooks/: 0-preprocessing.ipynb  1-model.ipynb  5-finetune.ipynb  analysis.ipynb  model.py
quantum_data_preparation/: README.md
quantum_data_preparation/data/: approved_drug_chembl.csv  phase_1.csv  phase_2.csv  phase_3.csv  smiles_id.csv
quantum_data_preparation/scripts/: 01_prepare_data.py  02_generate_conformers.py  03_run_mopac.py  04_run_orca.sh  05_postprocess_orca.py  06_process_janpa_results.py  test.ipynb
quantum_data_preparation/scripts/old/: data_match.ipynb  janpa2index.ipynb  orca2janpa.py  smi_to_5_mopac_opt.py  smiles_xyz_orca.ipynb
reports/: paper.md
reports/other/: ChebConvPrely.out  KANatom_ex.out  KANatom_ex.py  kan.out  kan.py  kan_RELU.out  kan_RELU.py  kan_more_epoch.out  kan_more_epoch.py  sage.out  sage.py
