[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fukui_net"
version = "0.0.1"
description = "This project develops a machine learning model using Chebyshev graph convolutions within a Kernel-based Attention Network (KAN) to accurately predict Fukui indices, which are essential for assessing molecular reactivity in chemical reactions."
authors = [
  { name = "SmartChemDesign" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true

[tool.ruff.lint.isort]
known_first_party = ["fukuinet:_chebyshev_graph_based_kan_for_molecular_reactivity_prediction"]
force_sort_within_sections = true
